# harness-engineering-from-cc-to-ai-coding

./: .gitignore  CLAUDE.md  README.en.md  README.md
.claude/skills/skillify/: SKILL.md
.github/workflows/: pages.yml
book/: book.toml  language-switcher.css  language-switcher.js  mermaid-init.js  pagefind-search.js
book-en/: book.toml  pagefind-search.css
book-en/src/: SUMMARY.md  preface.md
book-en/src/appendix/: a-file-index.md  b-env-vars.md  c-glossary.md  d-feature-flags.md  e-version-evolution.md  g-auth-subscription.md
book-en/src/part1/: ch01.md  ch02.md  ch03.md  ch04.md
book-en/src/part2/: ch05.md  ch06.md  ch06b.md  ch07.md  ch08.md
book-en/src/part3/: ch09.md  ch10.md  ch11.md  ch12.md
book-en/src/part4/: ch13.md  ch14.md  ch15.md
book-en/src/part5/: ch16.md  ch17.md  ch18.md  ch18b.md  ch19.md
book-en/src/part6/: ch20.md  ch20b.md  ch20c.md  ch21.md  ch22.md  ch22b.md  ch23.md  ch23b.md  ch24.md
book-en/src/part7/: ch25.md  ch26.md  ch27.md  ch28.md  (+2 more)
book/src/: SUMMARY.md  preface.md
docs/: book-outline.md
docs/version-diffs/: v2.1.88-vs-v2.1.91-book-impact.md  v2.1.88-vs-v2.1.92.md
examples/code-review-agent/: Cargo.toml  README.md
examples/code-review-agent/src/: agent.rs  context.rs  llm.rs  main.rs  mcp.rs  prompts.rs  resilience.rs  review.rs  tools.rs
scripts/: check-chapter-quality.sh
specs/: book-improvements-v2.spec.md  ch17b-prompt-injection-defense.spec.md  ch22b-plugin-system.spec.md  ch30-build-your-agent.spec.md  interactive-viz.spec.md  project.spec.md  v2.1.92-book-updates.spec.md  version-evolution.spec.md
(+53 files in other folders)
