[package]
name = "code-review-agent"
version = "0.1.0"
edition = "2024"
description = "A mini Code Review Agent with custom agent loop and pluggable LLM backends (cc-sdk, Codex). Supports HTTP and WebSocket. Can run as CLI or MCP Server."

[dependencies]
cc-sdk = { version = "0.8.1", features = ["websocket"] }
rmcp = { version = "1.3", features = ["server", "transport-io", "macros"] }
tokio = { version = "1.49", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
dirs = "5"
